// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`modules/manager/npm/post-update/pnpm > catches errors 1`] = `
[
  {
    "cmd": "pnpm install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": {
      "cwd": "some-dir",
      "cwdFile": "some-dir/pnpm-lock.yaml",
      "docker": {},
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "extraEnv": {
        "NPM_CONFIG_CACHE": undefined,
        "npm_config_cache_dir": undefined,
        "npm_config_store": undefined,
        "npm_config_store_dir": undefined,
        "pnpm_config_cache_dir": undefined,
        "pnpm_config_store_dir": undefined,
      },
      "maxBuffer": 10485760,
      "stderr": "pipe",
      "stdin": "pipe",
      "stdout": "pipe",
      "timeout": 900000,
      "toolConstraints": [
        {
          "constraint": "16.16.0",
          "toolName": "node",
        },
        {
          "constraint": "^2.0.0",
          "toolName": "pnpm",
        },
      ],
    },
  },
]
`;

exports[`modules/manager/npm/post-update/pnpm > finds pnpm globally 1`] = `
[
  {
    "cmd": "pnpm install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": {
      "cwd": "some-dir",
      "cwdFile": "some-dir/pnpm-lock.yaml",
      "docker": {},
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "extraEnv": {
        "NPM_CONFIG_CACHE": undefined,
        "npm_config_cache_dir": undefined,
        "npm_config_store": undefined,
        "npm_config_store_dir": undefined,
        "pnpm_config_cache_dir": undefined,
        "pnpm_config_store_dir": undefined,
      },
      "maxBuffer": 10485760,
      "stderr": "pipe",
      "stdin": "pipe",
      "stdout": "pipe",
      "timeout": 900000,
      "toolConstraints": [
        {
          "constraint": "16.16.0",
          "toolName": "node",
        },
        {
          "constraint": "^2.0.0",
          "toolName": "pnpm",
        },
      ],
    },
  },
]
`;

exports[`modules/manager/npm/post-update/pnpm > generates lock files 1`] = `
[
  {
    "cmd": "pnpm install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": {
      "cwd": "some-dir",
      "cwdFile": "some-dir/pnpm-lock.yaml",
      "docker": {},
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "extraEnv": {
        "NPM_CONFIG_CACHE": undefined,
        "npm_config_cache_dir": undefined,
        "npm_config_store": undefined,
        "npm_config_store_dir": undefined,
        "pnpm_config_cache_dir": undefined,
        "pnpm_config_store_dir": undefined,
      },
      "maxBuffer": 10485760,
      "stderr": "pipe",
      "stdin": "pipe",
      "stdout": "pipe",
      "timeout": 900000,
      "toolConstraints": [
        {
          "constraint": "16.16.0",
          "toolName": "node",
        },
        {
          "constraint": "^2.0.0",
          "toolName": "pnpm",
        },
      ],
    },
  },
]
`;

exports[`modules/manager/npm/post-update/pnpm > performs lock file maintenance 1`] = `
[
  {
    "cmd": "pnpm install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": {
      "cwd": "some-dir",
      "cwdFile": "some-dir/pnpm-lock.yaml",
      "docker": {},
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "extraEnv": {
        "NPM_CONFIG_CACHE": undefined,
        "npm_config_cache_dir": undefined,
        "npm_config_store": undefined,
        "npm_config_store_dir": undefined,
        "pnpm_config_cache_dir": undefined,
        "pnpm_config_store_dir": undefined,
      },
      "maxBuffer": 10485760,
      "stderr": "pipe",
      "stdin": "pipe",
      "stdout": "pipe",
      "timeout": 900000,
      "toolConstraints": [
        {
          "constraint": "16.16.0",
          "toolName": "node",
        },
        {
          "constraint": "^2.0.0",
          "toolName": "pnpm",
        },
      ],
    },
  },
]
`;

exports[`modules/manager/npm/post-update/pnpm > uses the new version if packageManager is updated 1`] = `
[
  {
    "cmd": "pnpm install --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": {
      "cwd": "some-dir",
      "cwdFile": "some-dir/pnpm-lock.yaml",
      "docker": {},
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "extraEnv": {
        "NPM_CONFIG_CACHE": undefined,
        "npm_config_cache_dir": undefined,
        "npm_config_store": undefined,
        "npm_config_store_dir": undefined,
        "pnpm_config_cache_dir": undefined,
        "pnpm_config_store_dir": undefined,
      },
      "maxBuffer": 10485760,
      "stderr": "pipe",
      "stdin": "pipe",
      "stdout": "pipe",
      "timeout": 900000,
      "toolConstraints": [
        {
          "constraint": "16.16.0",
          "toolName": "node",
        },
        {
          "constraint": "6.16.1",
          "toolName": "pnpm",
        },
      ],
    },
  },
]
`;
